<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/iv_recipe_card_item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/recipe_card_list_item_image_content_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_recipe_card_item_title"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            tools:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/tv_recipe_card_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_recipe_card_item_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            tools:text="@string/sample_recipe_list_item_title"
            android:textSize="32sp"/>

        <TextView
            android:id="@+id/tv_recipe_card_item_servings_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/recipe_list_item_servings_label"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_recipe_card_item_title"
            app:layout_constraintTop_toBottomOf="@id/tv_recipe_card_item_title"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/recipe_list_item_servings_label"/>

        <TextView
            android:id="@+id/tv_recipe_card_item_servings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_recipe_card_item_servings_label"
            app:layout_constraintStart_toEndOf="@id/tv_recipe_card_item_servings_label"
            tools:text="@string/sample_recipe_list_item_number_of_servings"
            android:textSize="20sp"/>

    </android.support.constraint.ConstraintLayout>
</layout>