<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <!-- Ensure the fragment is scrollable -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_recipe_card_step_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/player_view"
            android:layout_width="0dp"
            android:layout_height="360dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_recipe_card_detail_step"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/iv_recipe_detail_step"
            android:layout_width="0dp"
            android:layout_height="360dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_recipe_card_detail_step"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/recipe_step_image_content_description_string"
            tools:src="@mipmap/ic_launcher"/>

        <View
            android:id="@+id/horizontal_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_view"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/tv_recipe_card_detail_step"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="Step Instruction"
            app:layout_constraintTop_toBottomOf="@id/horizontal_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_previous_step"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/button_previous_step"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Previous step"
            android:text="@string/recipe_card_fragment_previous_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_next_step"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"/>

        <Button
            android:id="@+id/button_next_step"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Next step"
            android:text="@string/recipe_card_fragment_next_button_label"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/button_previous_step"/>

    </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>